--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,31 +12,32 @@ body {
   align-items: center;
   height: 100vh;
   overflow: hidden;
+  
 }
 
 
 .form-container {
-  background: rgba(255, 255, 255, 0.15); /* light peach with transparency */
-  padding: 30px 40px;
+  position: relative;
+  max-width: 500px;
+  margin: 80px auto; /* centers horizontally */
+  padding: 30px;
+  background: rgba(255, 255, 255, 0.15);
   border-radius: 20px;
-  backdrop-filter: blur(20px);
-  -webkit-backdrop-filter: blur(20px);
-  box-shadow: 0 8px 30px rgba(0, 0, 0, 0.2);
-  max-width: 450px;
-  width: 90%;
+  backdrop-filter: blur(10px);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
   text-align: center;
-  border: 1px solid rgba(255, 255, 255, 0.3);
 }
+
 .form-container:hover {
   box-shadow: 0 0 25px rgba(255, 182, 193, 0.6);
   border: 1px solid rgba(255, 255, 255, 0.6);
   transition: box-shadow 0.4s ease, border 0.4s ease;
 }
 .output-container {
-  margin-top: 20px;
+  margin-top: 0px;
   background: rgba(255, 255, 255, 0.25);
   backdrop-filter: blur(6px);
-  padding: 12px 20px;
+  padding: 10px 20px;
   border-radius: 12px;
   font-size: 1rem;
   color: #5b4b49;
@@ -154,12 +155,26 @@ form button:hover {
 
 body {
   margin: 0;
+    min-height: 100vh;
+  display: flex;
+  justify-content: center;
+    align-items: center;
   padding: 0;
   font-family: 'Quicksand', sans-serif;
-  background: url(https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExaGp1YWFoNndzdGYwZW5sczE0OXpnZ2YwbDlhYjVmbjZtbXh2ZTZncyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/zTQQPJXn1j8Jy/giphy.gif);
+  background: url(https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExaGp1YWFoNndzdGYwZW5sczE0OXpnZ2YwbDlhYjVmbjZtbXh2ZTZncyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/zTQQPJXn1j8Jy/giphy.gif) ;
   color: #5b4b49;
   text-align: center;
 }
+.overlay {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(1.5px);
+  z-index: -1;
+}
+
 
 /* Headings */
 h1, h2, h3 {
