--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -261,7 +261,7 @@ p {
   margin-right: 4px;
 }
 body.wishlist-page {
-  background: url('https://i.pinimg.com/originals/ae/18/2c/ae182cb4c6e7b8a9785d242a15555a1c.gif') no-repeat center center fixed;
+  background: url('https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExaXNlYTJnMXpuZ3hpc2EwenlhYTBjd3NiOG4wMjRubng3dnYwbzAzbSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/DoHGKMzgXl56jRQfvX/giphy.webp') no-repeat center center fixed;
   background-size: cover;
 }
 
