--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -227,7 +227,7 @@ p {
   box-shadow: 0 5px 15px rgba(255, 120, 140, 0.2);
   border: none;
 }
-.shop-links-container {
+/* .shop-links-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
   gap: 16px;
@@ -235,7 +235,7 @@ p {
   margin: 40px auto;
   padding: 0 20px;
   justify-items: center;
-}
+} */
 .shop-links-container a {
   display: flex;
   align-items: center;
