--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -58,9 +58,9 @@ body {
 }
 
 h1 {
-  font-family: 'Pacifico', cursive;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 1.8rem;
-  color: #ff6f61;
+  color: #8b4f39;
   margin-bottom: 10px;
 }
 
@@ -153,7 +153,7 @@ form button:hover {
 #wishlistInfo h2 {
   font-size: 1.7rem;
   margin-bottom: 15px;
-  color: #ff6f61;
+  color: #8b4f39;
 }
 
 #wishlistInfo p {
