--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -245,7 +245,7 @@ form button:hover {
 }
 
 body.wishlist-page {
-  background: url('https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExaXNlYTJnMXpuZ3hpc2EwenlhYTBjd3NiOG4wMjRubng3dnYwbzAzbSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/DoHGKMzgXl56jRQfvX/giphy.webp') no-repeat center center fixed;
+  background: url('https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExbjJocWJjZmpkemV3bmVlanF3bmlqdTA3bGIzdjJ1d3NvYTNxZ3hhOCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/VUC9YdLSnKuJy/giphy.gif') no-repeat center center fixed;
   background-size: cover;
 }
 
