--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -269,7 +269,7 @@ form button:hover {
 }
 
 body.wishlist-page {
-  background: url('https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExcnFkOHB0a2JvYmJkY28wMHE1d3ZxeHg0b2NlNXZuODdnanByb3YyMCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/yALcFbrKshfoY/giphy.gif') no-repeat center center fixed;
+  background: url('https://images.steamusercontent.com/ugc/449611652050198394/003B0F458420C44A75D10CBDC94A9C0B964C06F7/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false') no-repeat center center fixed;
   background-size: cover;
 }
 
