--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -269,7 +269,7 @@ form button:hover {
 }
 
 body.wishlist-page {
-  background: url('https://motionbgs.com/dl/gif/3705') no-repeat center center fixed;
+  background: url('https://giffiles.alphacoders.com/220/220123.gif') no-repeat center center fixed;
   background-size: cover;
 }
 
