--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -269,7 +269,7 @@ form button:hover {
 }
 
 body.wishlist-page {
-  background: url('https://giffiles.alphacoders.com/220/220123.gif') no-repeat center center fixed;
+  background: url('https://64.media.tumblr.com/0121b28e730abcb20145cc7515dcbc84/7da4b1cc0dfd6a22-5c/s500x750/817389eff016846957cf736b4900d418211c1b9a.gif') no-repeat center center fixed;
   background-size: cover;
 }
 
